# cmake-tdd-template

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: CMakeLists.txt  main.cpp
src/mylib/: CMakeLists.txt  say_hello.cpp  say_hello.h
test/: CMakeLists.txt  main.cpp  say_hello.cpp
